# lib-forge

./: .gitignore  Cargo.toml  README.md  libforge.toml
.github/workflows/: uniffi-xforge-macos.yml
adapters/dart/: README.md  pubspec.yaml
adapters/dart/lib/: libforge_dart.dart  xforge_dart.dart
adapters/dart/lib/src/precompiled/: artifacts_provider.dart  crate_hash.dart  options.dart  precompiled_builder.dart  target.dart  util.dart
adapters/dart/test/: app_overrides_test.dart
adapters/dart/tool/: cli.dart
adapters/dart/tool/commands/: keygen.dart  validate_precompiled.dart
adapters/gradle/: README.md
adapters/python/: README.md
adapters/swift/: README.md
crates/libforge-build/: Cargo.toml
crates/libforge-build/src/: builder.rs  cargo.rs  cross.rs  lib.rs  zigbuild.rs
crates/libforge-build/tests/: integration_build.rs
crates/libforge-cli/: Cargo.toml
crates/libforge-cli/src/: main.rs
crates/libforge-cli/src/commands/: build.rs  bundle.rs  mod.rs  publish.rs  sign.rs  verify.rs
crates/libforge-cli/tests/: end_to_end_flow.rs  full_flow.rs  github_publish_flow.rs
crates/libforge-core/: Cargo.toml
crates/libforge-core/src/: build_plan.rs  config.rs  lib.rs  toolchain.rs
crates/libforge-core/src/artifact/: checksum.rs  layout.rs  mod.rs  naming.rs
crates/libforge-core/src/bindings/: mod.rs  model.rs
crates/libforge-core/src/build_id/: hash.rs  inputs.rs  mod.rs
crates/libforge-core/src/manifest/: mod.rs  schema.rs  serialize.rs  validate.rs
crates/libforge-core/src/platform/: key.rs  mod.rs
crates/libforge-core/src/security/: ed25519.rs  mod.rs
crates/libforge-core/tests/: integration_flow.rs
crates/libforge-pack/: Cargo.toml
crates/libforge-pack/src/: android.rs  common.rs  lib.rs  xcframework.rs
crates/libforge-publish/: Cargo.toml
crates/libforge-publish/src/: github.rs  lib.rs  local.rs  release.rs
crates/xforge-build/: Cargo.toml
crates/xforge-build/src/: builder.rs  cargo.rs  cross.rs  lib.rs  zigbuild.rs
crates/xforge-build/tests/: integration_build.rs
crates/xforge-cli/: Cargo.toml
crates/xforge-cli/src/: main.rs
crates/xforge-cli/src/commands/: build.rs  bundle.rs  keygen.rs  mod.rs  publish.rs  sign.rs  verify.rs
crates/xforge-cli/tests/: end_to_end_flow.rs  full_flow.rs  github_publish_flow.rs
crates/xforge-core/: Cargo.toml
crates/xforge-core/src/: build_plan.rs  config.rs  toolchain.rs
crates/xforge-core/src/artifact/: layout.rs  mod.rs
crates/xforge-core/src/bindings/: mod.rs
crates/xforge-core/src/build_id/: hash.rs  inputs.rs  mod.rs
crates/xforge-core/src/manifest/: schema.rs  validate.rs
crates/xforge-core/src/util/: mod.rs
crates/xforge-core/tests/: integration_flow.rs
crates/xforge-pack/: Cargo.toml
crates/xforge-pack/src/: android.rs  common.rs  lib.rs  tar.rs  xcframework.rs  zip.rs
crates/xforge-publish/: Cargo.toml
crates/xforge-publish/src/: github.rs  lib.rs  release.rs
docs/: configuring-targets.md  overview.md  release.md
examples/uniffi-xforge/: Cargo.toml  README.md
examples/uniffi-xforge/dart/: pubspec.yaml
schemas/: config.schema.json  manifest.schema.json
