[package]
name = "libforge-cli"
version = "0.1.0"
edition = "2021"
publish = false
license = "Apache-2.0"

[lib]
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
ed25519-dalek = { version = "2.1", default-features = false, features = ["std", "rand_core"] }
hex = "0.4"
libforge-core = { path = "../libforge-core" }
libforge-publish = { path = "../libforge-publish" }
libforge-build = { path = "../libforge-build" }
libforge-pack = { path = "../libforge-pack" }
rand_core = { version = "0.6", features = ["getrandom"] }
sha2 = "0.10"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
libforge-build = { path = "../libforge-build" }
libforge-core = { path = "../libforge-core" }
