[package]
name = "xforge-core"
version = "0.1.0"
edition = "2021"
publish = false
description = "Core abstractions for XForge distributions."
license = "Apache-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
hex = "0.4"
ed25519-dalek = { version = "2.1", default-features = false, features = ["std"] }
