[package]
name = "uniffi-xforge"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]
[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
[dependencies]
uniffi = { version = "=0.30.0", features = ["cli"] }
uniffi-dart = { git = "https://github.com/Uniffi-Dart/uniffi-dart", rev = "5bdcc790c3fc99845e7b4a61d7a4f6e1460896e9" }
camino = "1.2"

[build-dependencies]
uniffi = { version = "=0.30.0", features = ["build"] }
uniffi-dart = { git = "https://github.com/Uniffi-Dart/uniffi-dart", rev = "5bdcc790c3fc99845e7b4a61d7a4f6e1460896e9", features = [
    "build",
] }

